--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.23"
+phf = { version = "0.11", default-features = false }
+phf_macros = "0.11.1"
 strum = "0.24.1"
 strum_macros = "0.24.3"
